// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Acquisition Events API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": false,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":contributions-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Acquisition Events API received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "ACQUISITION-EVENTS-API-CDK- CODE API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "acquisition-events-api-CODE",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "acquisition-events-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName28BEE6C11",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName28BEE6C11": {
      "Properties": {
        "DomainName": "acquisition-events-code.support.guardianapis.com",
        "DomainNameConfigurations": [
          {
            "CertificateArn": {
              "Fn::Join": [
                "",
                [
                  "arn:aws:acm:eu-west-1:",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
                ],
              ],
            },
            "EndpointType": "REGIONAL",
          },
        ],
        "Tags": {
          "Stack": "support",
          "Stage": "CODE",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
    },
    "EventBridgeIntegration": {
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiCODE8060A47C",
        },
        "CredentialsArn": {
          "Fn::GetAtt": [
            "EventBridgeIntegrationRoleB322760B",
            "Arn",
          ],
        },
        "IntegrationSubtype": "EventBridge-PutEvents",
        "IntegrationType": "AWS_PROXY",
        "PayloadFormatVersion": "1.0",
        "RequestParameters": {
          "Detail": "$request.body",
          "DetailType": "AcquisitionsEvent",
          "EventBusName": "arn:aws:events:eu-west-1:865473395570:event-bus/acquisitions-bus-CODE",
          "Source": "ApiGateway",
        },
        "TimeoutInMillis": 10000,
      },
      "Type": "AWS::ApiGatewayV2::Integration",
    },
    "EventBridgeIntegrationRoleB322760B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-frontend",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EventBridgeIntegrationRoleDefaultPolicy16371A00": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "events:PutEvents",
              "Effect": "Allow",
              "Resource": "arn:aws:events:eu-west-1:865473395570:event-bus/acquisitions-bus-CODE",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventBridgeIntegrationRoleDefaultPolicy16371A00",
        "Roles": [
          {
            "Ref": "EventBridgeIntegrationRoleB322760B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventRoute": {
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiCODE8060A47C",
        },
        "RouteKey": "POST /",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "EventBridgeIntegration",
              },
            ],
          ],
        },
      },
      "Type": "AWS::ApiGatewayV2::Route",
    },
    "acquisitionseventbridgeapiCODE8060A47C": {
      "Properties": {
        "Name": "acquisitions-eventbridge-api-CODE",
        "ProtocolType": "HTTP",
        "Tags": {
          "Stack": "support",
          "Stage": "CODE",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "acquisitionseventbridgeapiCODEDefaultStage8CFF60B0": {
      "DependsOn": [
        "DomainName28BEE6C11",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiCODE8060A47C",
        },
        "AutoDeploy": true,
        "StageName": "$default",
        "Tags": {
          "Stack": "support",
          "Stage": "CODE",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
    "acquisitionseventbridgeapiCODEDefaultStageAcquisitionEventsAPICODEDomainName2undefinedB7332337": {
      "DependsOn": [
        "acquisitionseventbridgeapiCODEDefaultStage8CFF60B0",
        "DomainName28BEE6C11",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiCODE8060A47C",
        },
        "DomainName": {
          "Ref": "DomainName28BEE6C11",
        },
        "Stage": "$default",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
    },
  },
}
`;

exports[`The Acquisition Events API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Resources": {
    "ApiGateway4XXAlarmCDKC83EACCA": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":contributions-dev",
              ],
            ],
          },
        ],
        "AlarmDescription": "Impact - Acquisition Events API received an invalid request. Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit",
        "AlarmName": "ACQUISITION-EVENTS-API-CDK- PROD API gateway 4XX response",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "acquisition-events-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "4XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 1,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "acquisition-events.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName28BEE6C11",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName28BEE6C11": {
      "Properties": {
        "DomainName": "acquisition-events.support.guardianapis.com",
        "DomainNameConfigurations": [
          {
            "CertificateArn": {
              "Fn::Join": [
                "",
                [
                  "arn:aws:acm:eu-west-1:",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
                ],
              ],
            },
            "EndpointType": "REGIONAL",
          },
        ],
        "Tags": {
          "Stack": "support",
          "Stage": "PROD",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
    },
    "EventBridgeIntegration": {
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiPROD575D58B4",
        },
        "CredentialsArn": {
          "Fn::GetAtt": [
            "EventBridgeIntegrationRoleB322760B",
            "Arn",
          ],
        },
        "IntegrationSubtype": "EventBridge-PutEvents",
        "IntegrationType": "AWS_PROXY",
        "PayloadFormatVersion": "1.0",
        "RequestParameters": {
          "Detail": "$request.body",
          "DetailType": "AcquisitionsEvent",
          "EventBusName": "arn:aws:events:eu-west-1:865473395570:event-bus/acquisitions-bus-PROD",
          "Source": "ApiGateway",
        },
        "TimeoutInMillis": 10000,
      },
      "Type": "AWS::ApiGatewayV2::Integration",
    },
    "EventBridgeIntegrationRoleB322760B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-frontend",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EventBridgeIntegrationRoleDefaultPolicy16371A00": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "events:PutEvents",
              "Effect": "Allow",
              "Resource": "arn:aws:events:eu-west-1:865473395570:event-bus/acquisitions-bus-PROD",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EventBridgeIntegrationRoleDefaultPolicy16371A00",
        "Roles": [
          {
            "Ref": "EventBridgeIntegrationRoleB322760B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "EventRoute": {
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiPROD575D58B4",
        },
        "RouteKey": "POST /",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "EventBridgeIntegration",
              },
            ],
          ],
        },
      },
      "Type": "AWS::ApiGatewayV2::Route",
    },
    "acquisitionseventbridgeapiPROD575D58B4": {
      "Properties": {
        "Name": "acquisitions-eventbridge-api-PROD",
        "ProtocolType": "HTTP",
        "Tags": {
          "Stack": "support",
          "Stage": "PROD",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "acquisitionseventbridgeapiPRODDefaultStageAcquisitionEventsAPIPRODDomainName2undefined2FECD588": {
      "DependsOn": [
        "acquisitionseventbridgeapiPRODDefaultStageEB205C3C",
        "DomainName28BEE6C11",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiPROD575D58B4",
        },
        "DomainName": {
          "Ref": "DomainName28BEE6C11",
        },
        "Stage": "$default",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
    },
    "acquisitionseventbridgeapiPRODDefaultStageEB205C3C": {
      "DependsOn": [
        "DomainName28BEE6C11",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "acquisitionseventbridgeapiPROD575D58B4",
        },
        "AutoDeploy": true,
        "StageName": "$default",
        "Tags": {
          "Stack": "support",
          "Stage": "PROD",
          "gu:cdk:version": "TEST",
          "gu:repo": "guardian/support-frontend",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
  },
}
`;
